<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".controller.ButtonsAdapter">

    <Button
        android:id="@+id/btn_rolldices"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttons_height"
        android:layout_margin="4dp"
        android:layout_weight="2"
        android:onClick="onButtonClick"
        android:text="@string/roll" />

    <Button
        android:id="@+id/btn_save_roll"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttons_height"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="#000000"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_edit_roll"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttons_height"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:backgroundTint="#000000"
        android:text="@string/edit" />
</LinearLayout>