<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Succ_Fail"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_textviews"
        android:text="@string/adv_thr"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_textviews"
        android:text="@string/tri_desp"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_textviews"
        android:text="@string/lig_dark"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtview_succes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="0/0"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/txtview_adv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="@+id/txtview_succes"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtview_triumph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="@+id/txtview_adv"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtview_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/0"
        android:textSize="@dimen/results_font"
        app:layout_constraintStart_toStartOf="@+id/txtview_triumph"
        app:layout_constraintTop_toTopOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>