<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.DiceListFragment">


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler_view_dices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="7"
        app:spanCount="4"
        tools:listitem="@layout/dices_item" >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_dices"
        tools:context=".controller.ButtonsAdapter"
        tools:layout_editor_absoluteX="4dp">

        <Button
            android:id="@+id/btn_rolldices"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttons_height"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:onClick="onButtonClick"
            android:text="@string/roll" />

        <Button
            android:id="@+id/btn_save_roll"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttons_height"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_edit_roll"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttons_height"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:backgroundTint="#000000"
            android:text="@string/edit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>